#31 Move uuid from error to request.
