# openapi.yaml
@@ -45,6 +45,10 @@ components:
       nullable: true
       description: "The response to the getCertificate request. Error will be `null` if statusCode is `200`. Certificate will be `null` if statusCode is `500`"
       properties:
+        requestUuid:
+          type: "string"
+          format: "uuidv4"
+          description: "The uuid of the request which lead to this response. May be used for log correlation."
         error:
           $ref: "#/components/schemas/APIResponseError"
         certificate:
@@ -56,11 +60,7 @@ components:
       type: "object"
       nullable: true
       description: "The error that occured during the API-call or `null` if no error occured."
-      properties: 
-        uuid:
-          type: "string"
-          format: "uuidv4"
-          description: "The uuid of the error which occured. May be used for log correlation."
+      properties:
         code:
           $ref: "#/components/schemas/ErrorCode"
         publicMessage:
